# Object-Locator-in-Map-for-Robot-Exploration

./: README.md  package.xml  setup.cfg  setup.py
object_locator/: aruco_test.py  locator_node.py  test_node.py  yolo_test.py
